Add new content

--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : My Diary
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Stupid ET
+  email : et@everet.org
+  github : cedricporter
+  twitter : Stupid_ET
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.com
+production_url : http://stupidet.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -97,7 +97,7 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google 
+    provider : false #google 
     google : 
         tracking_id : 'UA-123-12'
     getclicky :
@@ -117,9 +117,9 @@ JB :
   # a hash with key named for the given helper. ex:
   #
   #   pages_list :
-  #     provider : "custom"   
+  #     provider : "custom   
   #
-  # Setting any helper's provider to 'custom' will bypass the helper code
+  # Setting any helper's provider to 'custom will bypass the helper code
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
