--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   email : et@everet.org
   github : cedricporter
   twitter : Stupid_ET
-  feedburner : feedname
+  feedburner : 
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -26,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://stupidet.github.com
+production_url : http://diary.everet.org
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -80,7 +80,7 @@ JB :
   #
   comments :
     provider : disqus
-    disqus :
+    disqus : everet
       short_name : jekyllbootstrap
     livefyre :
       site_id : 123
